# Haskell-MMorph-Library

./: .gitignore  CHANGELOG.md  LICENSE  default.nix  mmorph.cabal  release.nix  shell.nix
.github/workflows/: haskell.yml
Control/Monad/: Morph.hs
Control/Monad/Trans/: Compose.hs
src/Control/Monad/: Morph.hs
src/Control/Monad/Trans/: Compose.hs
