Name: mmorph
Version: 1.0.0
Cabal-Version: >= 1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-MMorph-Library/issues
Synopsis: Monad morphisms
Description: This library provides monad morphism utilities, most commonly used
    for manipulating monad transformer stacks.
Category: Control
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-MMorph-Library

Library
    Build-Depends:
        base         >= 4       && < 5  ,
        transformers >= 0.2.0.0 && < 0.4
    Exposed-Modules: Control.Monad.Morph
    GHC-Options: -O2
