Name: mmorph
Version: 1.2.2
Cabal-Version: >= 1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriella Gonzalez
Author: Gabriella Gonzalez
Maintainer: GenuineGabriella@gmail.com
Bug-Reports: https://github.com/Gabriella439/Haskell-MMorph-Library/issues
Synopsis: Monad morphisms
Description: This library provides monad morphism utilities, most commonly used
    for manipulating monad transformer stacks.
Category: Control
Extra-Doc-Files: CHANGELOG.md
Tested-With: GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.8, GHC == 9.4.8, GHC == 9.6.7, GHC == 9.8.4, GHC == 9.10.3, GHC == 9.12.2, GHC == 9.14.1

Source-Repository head
    Type: git
    Location: https://github.com/Gabriella439/Haskell-MMorph-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                >= 4.14  && < 5  ,
        mtl                 >= 2.1   && < 2.4,
        transformers        >= 0.5   && < 0.7,
        transformers-compat >= 0.6.1 && < 0.8
    Exposed-Modules: Control.Monad.Morph, Control.Monad.Trans.Compose
    GHC-Options: -O2
    Default-Language: Haskell2010
